# AllTasks

./: AllTasks.cpp  AllTasks.sln  AllTasks.vcxproj  AllTasks.vcxproj.filters  CMakeLists.txt  Class.cpp  Class.h  TASK3_Equilateral_triangle.cpp  TASK3_Equilateral_triangle.h  TASK3_Isosceles_triangle.cpp  TASK3_Isosceles_triangle.h  TASK3_Parallelogram.cpp  TASK3_Parallelogram.h  TASK3_Quadrangle.cpp  TASK3_Quadrangle.h  TASK3_Rectangle.cpp  TASK3_Rectangle.h  TASK3_Rhombus.cpp  TASK3_Rhombus.h  TASK3_Right_triangle.cpp  TASK3_Right_triangle.h  TASK3_Square.cpp  TASK3_Square.h  TASK3_Triangle.cpp  TASK3_Triangle.h  func.cpp  func.h
